[gd_scene load_steps=9 format=3 uid="uid://bk57pfwypy8yf"]

[ext_resource type="Script" path="res://scripts/pause_menu.gd" id="1_bfojr"]
[ext_resource type="Shader" path="res://scripts/pause_menu_blur.gdshader" id="1_x56pt"]
[ext_resource type="FontFile" uid="uid://kg2w0sgacegs" path="res://assets/fonts/8bitoperator_jve.ttf" id="2_bc335"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_3xjpl"]
shader = ExtResource("1_x56pt")
shader_parameter/lod = 0.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hpj4s"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(1, 1, 1, 1)

[sub_resource type="Animation" id="Animation_aon77"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("VBoxContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_ufpqx"]
resource_name = "blur"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 0.819]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("VBoxContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1.03527, 0.108819),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_u6q5s"]
_data = {
"RESET": SubResource("Animation_aon77"),
"blur": SubResource("Animation_ufpqx")
}

[node name="PauseMenu" type="Control"]
process_mode = 3
z_index = 3000
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_bfojr")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_3xjpl")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -383.0
offset_right = 200.0
offset_bottom = 235.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/separation = 25
alignment = 1

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 95)
layout_mode = 2
mouse_filter = 2
theme_override_constants/outline_size = 16
theme_override_fonts/normal_font = ExtResource("2_bc335")
theme_override_font_sizes/normal_font_size = 80
bbcode_enabled = true
text = "[center]Paused"
fit_content = true

[node name="ContinueBtn" type="Button" parent="VBoxContainer"]
texture_filter = 1
custom_minimum_size = Vector2(400, 100)
layout_mode = 2
mouse_filter = 1
theme_override_fonts/font = ExtResource("2_bc335")
theme_override_font_sizes/font_size = 48
theme_override_styles/focus = SubResource("StyleBoxFlat_hpj4s")
theme_override_styles/disabled = SubResource("StyleBoxFlat_hpj4s")
theme_override_styles/hover = SubResource("StyleBoxFlat_hpj4s")
theme_override_styles/pressed = SubResource("StyleBoxFlat_hpj4s")
theme_override_styles/normal_mirrored = SubResource("StyleBoxFlat_hpj4s")
theme_override_styles/normal = SubResource("StyleBoxFlat_hpj4s")
text = "Continue"

[node name="SettingsButton" type="Button" parent="VBoxContainer"]
texture_filter = 1
custom_minimum_size = Vector2(400, 100)
layout_mode = 2
mouse_filter = 1
theme_override_fonts/font = ExtResource("2_bc335")
theme_override_font_sizes/font_size = 48
theme_override_styles/focus = SubResource("StyleBoxFlat_hpj4s")
theme_override_styles/disabled = SubResource("StyleBoxFlat_hpj4s")
theme_override_styles/hover = SubResource("StyleBoxFlat_hpj4s")
theme_override_styles/pressed = SubResource("StyleBoxFlat_hpj4s")
theme_override_styles/normal_mirrored = SubResource("StyleBoxFlat_hpj4s")
theme_override_styles/normal = SubResource("StyleBoxFlat_hpj4s")
text = "Settings"

[node name="ReturnToMenu" type="Button" parent="VBoxContainer"]
texture_filter = 1
custom_minimum_size = Vector2(400, 100)
layout_mode = 2
mouse_filter = 1
theme_override_fonts/font = ExtResource("2_bc335")
theme_override_font_sizes/font_size = 48
theme_override_styles/focus = SubResource("StyleBoxFlat_hpj4s")
theme_override_styles/disabled = SubResource("StyleBoxFlat_hpj4s")
theme_override_styles/hover = SubResource("StyleBoxFlat_hpj4s")
theme_override_styles/pressed = SubResource("StyleBoxFlat_hpj4s")
theme_override_styles/normal_mirrored = SubResource("StyleBoxFlat_hpj4s")
theme_override_styles/normal = SubResource("StyleBoxFlat_hpj4s")
text = "Return To Menu"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_u6q5s")
}

[connection signal="pressed" from="VBoxContainer/ContinueBtn" to="." method="_on_continue_btn_pressed"]
[connection signal="pressed" from="VBoxContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ReturnToMenu" to="." method="_on_return_to_menu_pressed"]
